--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: chatwoot_sdk
 description: A flutter client sdk for chatwoot. Integrate Chatwoot flutter client into your flutter app and talk to your visitors/users in real time.
-version: 0.0.9
+version: 0.1.0
 homepage: https://github.com/chatwoot/chatwoot-flutter-sdk
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: "^3.5.3"
 
 dependencies:
   flutter:
@@ -13,21 +12,29 @@ dependencies:
   flutter_chat_ui: ^1.1.9
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  uuid: ^3.0.4
-  web_socket_channel: ^2.1.0
+  uuid: ^4.5.1
+  web_socket_channel: ^3.0.1
   json_annotation: ^4.0.1
-  dio: ^4.0.0
+  dio: ^5.7.0
   equatable: ^2.0.3
-  riverpod: ^0.14.0+3
+  riverpod: ^2.6.1
   synchronized: ^3.0.0
-  intl: ^0.17.0
-  flutter_chat_types: ^2.4.0
+  intl: ^0.20.0
+  flutter_chat_types: ^3.6.2
   stream_channel: ^2.1.0
   async: ^2.5.0
-  webview_flutter: ^4.0.6
-  flutter_secure_storage: ^8.0.0
-  url_launcher: ^6.1.10
+  flutter_secure_storage: ^9.2.2
+  url_launcher: ^6.3.1
   path_provider: ^2.0.13
+  mime: ^2.0.0
+  media_kit: ^1.1.11
+  media_kit_video: ^1.2.5
+  media_kit_libs_video: ^1.0.5
+  easy_image_viewer: ^1.5.1
+  cached_network_image: ^3.4.0
+  flutter_markdown: ^0.7.4+2
+  webview_flutter: ^4.10.0
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +43,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
-  flutter_lints: ^2.0.1
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
